k8s/local/websocket-event-publisher/sandbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: websocket-event-publisher-sandbox-label
  name: websocket-event-publisher-sandbox-deployment
  namespace: chicmoz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websocket-event-publisher-sandbox-label
  template:
    metadata:
      labels:
        app: websocket-event-publisher-sandbox-label
    spec:
      containers:
        - name: websocket-event-publisher
          image: websocket-event-publisher
          ports:
            - name: websocket-port
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 10
