k8s/local/websocket-event-publisher/sandbox/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-websocket-event-publisher-sandbox
  namespace: chicmoz
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "websocket-event-publisher"
spec:
  rules:
    - host: ws.sandbox.chicmoz.localhost
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: websocket-event-publisher-sandbox-service
                port:
                  name: websocket-port
status:
  loadBalancer: {}
